Fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ html {
     font-size: 62.5%;
     scroll-behavior: smooth;
     min-height: 100%;
+    overflow-x: hidden;
 }
 
 body {
@@ -27,6 +28,7 @@ body {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
+    overflow-x: hidden;
 }
 
 section {
